# nspowerwatch

./: .gitignore  Cargo.toml  README.md  data_diagram.vuerd.json
acquisition/: Cargo.toml
acquisition/src/: main.rs
backend/: Cargo.toml
backend/src/: lib.rs  models.rs  schema.rs
grpc/: Cargo.toml  build.rs
grpc-common/: outages.proto
grpc/src/: main.rs  outage_service.rs  types.rs
migrations/2022-09-25-175146_initial/: down.sql  up.sql
wasm/: Cargo.toml
wasm/src/: lib.rs
www/: package-lock.json  package.json  rollup.config.js  vite.config.ts
www/src/: App.svelte  OutageChart.svelte  main.js
www/src/routes/: +page.svelte  ChartControls.svelte  OutageChart.svelte
