[package]
name = "acquisition"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scheffel <matt@dataheck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
chrono = { version = "0.4" }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
log = "0.4"
reqwest = {version = "0.11", features = ["blocking"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.0"