[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
backend = { path = "../backend" }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
log = "0.4"
prost = "0.11"
prost-types = "0.11"
simple_logger = "2.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
tonic = {version = "0.8", features = ["transport", "tls", "codegen", "prost"] }
tonic-web = "0.4"

[build-dependencies]
tonic-build = { version = "0.8" }