[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scheffel <matt@dataheck.com>"]

[dependencies]
backend = { path = "../backend" }
chrono = "0.4.24"
clap = { version = "4.1", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
drop-root = { git = "ssh://gitea/dataheck/drop-root.git" }
futures = "0.3"
http = "0.2"
log = "0.4"
prost = "0.12"
prost-types = "0.12"
simple_logger = "5.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
tokio-stream = "0.1"
tonic = { version = "0.11", features = ["transport", "codegen", "prost","tls"] }
tonic-web = "0.11"
tower-http = { version = "0.4", features = ["cors"] }

[build-dependencies]
tonic-build = { version = "0.11" }