[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scheffel <matt@dataheck.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
prost = "0.11"
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
tonic = { version = "0.8", default-features = false, features = ["prost","codegen"] }
tonic-web-wasm-client = { version = ">=0.2.2" }
wasm-bindgen = { version = "0.2.63", default-features = false, features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4.5"

[build-dependencies]
tonic-build = { version = "0.8", default-features = false, features = ["prost",] }